# Philosopher ?
### Build: ?

### Added
### Changed
### Fixed


# Philosopher 20180924
### Build: 201809241411

### Added
- Minor bug fixes.
- New tutorail added to website.

# Philosopher 20180905
### Build: 201809051532

### Added
- Support for MS3 isobaric tagging.
- Support for TMT 11 plex.

### Fixed
- Minor bug fixes.

# Philosopher 20180823
### Build: 201808231104

### Added
- Glu-C enzyme was added to database formatting.
### Changed
- Background temporary data now is removed after the program is done with the analysis.
### Fixed
- A problem introduced in the last release with the protein to gene razor assignment was fixed.

# Philosopher 20180530
### Build: 201805301634

### Fixed
- Fixed an error when trying to run label free quantification.

# Philosopher 20180524
### Build: 201805241056

### Changed
- Labelquant removeLow value is now passed as a parameter.

# Philosopher 20180522
### Build: 201805221309

### Fixed
- An error was creating malformed abacus reports.

# Philosopher 20180518
### Build: 201805181025

### Added
### Changed
### Fixed
- Razor assignment prevents low level proteins to be selected.
- Empty PSM tables when using only peptide validation.

# Philosopher 20180424
### Build: 201804241534

### Added
- New parameter bestPSM added to TMT quantification.

### Changed
- Improved speed when processing TMT data.

### Fixed
- Razor assignment for isoforms
- Reports doesn't try to create phospho reports all the time anymore.

# Philosopher 20180323
### Build: 201803231722

### Added
- Override mods in PTMProphet.
- New localization report with all PTMProphet site localization.
- Phospho-protein report containing only quantification from phospho peptides.
- New columns for phosphorylation localization on PSM tables.

### Changed
- The PTM localization on the PSM report now only reports phosphorylation.

### Fixed
- Empty mapped proteins column on PSM table.

# Philosopher 20180317
### Build: 201803172202

### Fixed