@@ -25,4 +25,4 @@ M/Z tolerance in PPM (default 10).
 
 Use spectra information from all mz files and, based on the peptide identifications, extract the given intensities. The resulting intensities will be stored inside the workspace, there is no output from this command.
 
-`philosopher freequant --dir mz/ --ext mzXML`
+`philosopher freequant --dir mz/`
