@@ -6,6 +6,15 @@
 ### Fixed
 
 
+# Philosopher 20181011
+### Build: 201810111533
+
+### Added
+- Support for ENSEMBL databases.
+
+### Fixed
+-Minor bug fixes.
+
 # Philosopher 20180924
 ### Build: 201809241411
 
